k8s/overlays/prod/frontend-patch.yaml
# frontend-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-hivebox
spec:
  containers:
  - name: frontend-hivebox
    image: h3itham/frontend-hivebox:v1.5.0
  replicas: 1
  template:
    spec:
      containers:
      - name: frontend-hivebox
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
