k8s/overlays/prod/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-hivebox-ingress
  annotations:
    external-dns.alpha.kubernetes.io/hostname: prod-hivebox.haithamelabd.com
spec:
  tls:
  - hosts:
    - prod-hivebox.haithamelabd.com
    secretName: hivebox-tls
